@@ -1,6 +1,7 @@
 New in SVN (will be 0.12)
 -------------------------
 
+* Respect spaceBefore and spaceAfter for footnotes/endnotes
 * Added tests for (almost) all of sphinx's custom markup
 * Fixed Issue 170 (Wrong font embedding)
 * Fixed Issue 171 (Damaged xref table)
